--- a/posts/2021-09-16.md
+++ b/posts/2021-09-16.md
@@ -1,4 +1,9 @@
-# この二畳間さえあればいい
+---
+title: 'この二畳間さえあればいい2'
+date: '2020/9/16'
+excerpt: 'この二畳間さえあればいい'
+cover_image: '/images/posts/img1.jpg'
+---
 
 # ブログつくった
 このブログは Next.js x TypeScript でつくっている。とはいえまだこの文章を書いているときはドメインも取っていないし、デプロイもしていないからだれもこのブログにアクセスできない。この文章が誰かに読まれたということは、このブログが無事デプロイされたということだ。よかったよかった。
