[Add] ogpのmetaタグ実装

--- a/posts/2021-09-14.md
+++ b/posts/2021-09-14.md
@@ -1,7 +1,7 @@
 ---
 title: 'コードブロックをハイライトするようにした！'
 date: '2020/9/14'
-excerpt: 'このブログは Next.js x TypeScript でつくっている。とはいえまだこの文章を書いているときはドメインも取っていないし、デプロイもしていないからだれもこのブログにアクセスできない。この文章が誰かに読まれたということは、このブログが無事デプロイされたということだ。'
+excerpt: '## コードブロックをハイライトさせたかった。このブログを参考にした。[Next.jsでmarkdownのコードブロックをPrismJSでシンタックスハイライトする](https://www.ibulog.com/posts/2021/08/nextjs-prismjs)'
 cover_image: '/images/posts/img2.jpg'
 ---
 
@@ -21,3 +21,10 @@ const helloWorld = () => {
 ```
 
 光る！　コードがいろんな色に光っている！　ひゃーーー！　うれしい。
+
+# Firebase Hosting にデプロイしたときに記事ページのURLでアクセスするとルートに飛ばされた
+.htmlをつければうまくアクセスできる。なぜ。
+
+- [Firebase Hosting の URL で .html を省略する設定](https://blog.anozon.me/firebase-hosting-clean-url)
+
+この記事で解決した。firebase.jsonで `cleanUrls: true` にすればいいらしい。
