--- a/posts/2021-09-14.md
+++ b/posts/2021-09-14.md
@@ -22,9 +22,17 @@ const helloWorld = () => {
 
 光る！　コードがいろんな色に光っている！　ひゃーーー！　うれしい。
 
-# Firebase Hosting にデプロイしたときに記事ページのURLでアクセスするとルートに飛ばされた
+## Firebase Hosting にデプロイしたときに記事ページのURLでアクセスするとルートに飛ばされた
 .htmlをつければうまくアクセスできる。なぜ。
 
 - [Firebase Hosting の URL で .html を省略する設定](https://blog.anozon.me/firebase-hosting-clean-url)
 
 この記事で解決した。firebase.jsonで `cleanUrls: true` にすればいいらしい。
+
+##　雑記
+今日は仕事終わった後、このブログのコードブロックのハイライト表示処理と、OGP表示処理をやった。21:30くらいから作業を始めたはずだけれど、気づけばもう1:30である。創作をしている時間は、不安から開放されるのでとてもいい。自分でなにかを作ってお金を稼げるようになるのが自分の幸福かもしれないなと思う。会社でつくっているなんの面白みもない業務アプリではなくて、もっと作って楽しくて、使って楽しいアプリをつくりたい。もう業務アプリは作りたくないので、正直会社やめたい。そろそろ結婚して引っ越しもするし、それを期に職場を変えるつもりである。できればエンタメよりのプロダクトを作っている会社がいいな。とらのあなとかずっと募集しているみたいだし、受けてみようかな。Vue つかってるっぽいけど、React ではいれるのかな。
+
+## がんばろうな自分
+とりあえず毎日少しずつ目的をもって個人開発をしていこう。全ては目覚ましに起こされないストレスレスな生活を手に入れるためである。
+
+
