[Add] ブログ記事更新

--- a/posts/2021-09-14.md
+++ b/posts/2021-09-14.md
@@ -1,7 +1,7 @@
 ---
 title: 'コードブロックをハイライトするようにした！'
 date: '2020/9/14'
-excerpt: '## コードブロックをハイライトさせたかった。このブログを参考にした。[Next.jsでmarkdownのコードブロックをPrismJSでシンタックスハイライトする](https://www.ibulog.com/posts/2021/08/nextjs-prismjs)'
+excerpt: 'コードブロックをハイライトさせたかった。このブログを参考にした。Next.jsでmarkdownのコードブロックをPrismJSでシンタックスハイライトする 天才的な記事で、一瞬で実装することができた。'
 cover_image: '/images/posts/img2.jpg'
 ---
 
