--- a/posts/2021-09-14.md
+++ b/posts/2021-09-14.md
@@ -1,8 +1,9 @@
 ---
 title: 'コードブロックをハイライトするようにした！'
-date: '2020/9/14'
+date: '2021/9/14'
 excerpt: 'コードブロックをハイライトさせたかった。このブログを参考にした。Next.jsでmarkdownのコードブロックをPrismJSでシンタックスハイライトする 天才的な記事で、一瞬で実装することができた。'
 cover_image: '/images/posts/img2.jpg'
+category: '雑記'
 ---
 
 ## コードブロックをハイライトさせたかった。
