--- a/posts/2021-09-15.md
+++ b/posts/2021-09-15.md
@@ -1,8 +1,9 @@
 ---
 title: 'あーあー。しーらないよー、倫也くん。どうなっちゃっても、しーらないよー'
-date: '2020/9/15'
+date: '2021/9/15'
 excerpt: '『冴えない彼女の育て方 Fine』 を観た(2回目)。加藤恵は死ぬほど可愛い。駅のホームで恋人つなぎをする加藤恵も、「あーあー。しーらないよー、倫也くん。どうなっちゃっても、しーらないよー」の加藤恵も、「ねえ、倫也くん。わたしはどうしたらいいのかな。'
 cover_image: '/images/posts/img3.jpg'
+category: '雑記'
 ---
 
 ## 冴えない彼女の育て方は最高だという話
