--- a/posts/2021-09-10.md
+++ b/posts/2021-09-10.md
@@ -1,8 +1,9 @@
 ---
 title: 'テスト投稿'
-date: '2020/9/10'
+date: '2021/9/10'
 excerpt: 'このブログは Next.js x TypeScript でつくっている。とはいえまだこの文章を書いているときはドメインも取っていないし、デプロイもしていないからだれもこのブログにアクセスできない。この文章が誰かに読まれたということは、このブログが無事デプロイされたということだ。'
 cover_image: '/images/posts/img1.jpg'
+category: '雑記'
 ---
 
 ## ブログつくった
