[Add] カテゴリコンポネント実装

--- a/posts/2021-09-21.md
+++ b/posts/2021-09-21.md
@@ -1,5 +1,5 @@
 ---
-title: 'ブログつくった'
+title: '[雑記] ブログつくった'
 date: '2021/9/21'
 excerpt: 'このブログは Next.js x Firebase で作った。SSGして、Firebase Hosting にデプロイするだけのかんたんなお仕事だ。最近、はてなブログを書き始めたけど'
 cover_image: '/images/icon/icon.png'
