--- a/posts/2022-08-31.md
+++ b/posts/2022-08-31.md
@@ -37,6 +37,7 @@ $ npm i ismobilejs
 ```
 
 - UserAgentClass を実装する
+
 ```ts
 import isMobile from 'ismobilejs';
 
@@ -113,7 +114,8 @@ export class UserAgentClass implements IUserAgentController {
 export const UserAgent = new UserAgentClass();
 ```
 
-- SSR
+- SSR するコンポネント側
+
 ```ts
 import type { NextPage } from 'next';
 
@@ -143,3 +145,6 @@ export async function getServerSideProps(context: any) {
   }
 }
 ```
+
+## おわり
+いったんこれで大丈夫そうかな。
