--- a/posts/2022-08-31.md
+++ b/posts/2022-08-31.md
@@ -1,13 +1,15 @@
 ---
 title: '[next.js] SSR でデバイスの種類を取得したい'
 date: '2022/8/30'
-excerpt: ''
+excerpt: 'クライアント側でデバイスの種類を取得したい場合は window.Navigator.userAgent を使用すればいいけれども、SSR 時は当然ながら window オブジェクトが存在しないので...'
 cover_image: ''
-category: 'next.js'
+category: 'プログラミング'
+tags: 'next.js'
+keywords: 'next.js'
 ---
 
 ## SSR では window.Navigator.userAgent が使えない
-クライアント側でデバイスの種類を取得死体と場合は window.Navigator.userAgent を使用すればいいけれども、SSR 時は当然ながら window オブジェクトが存在しないので window.Navigator.userAgent を仕様することはできない。
+クライアント側でデバイスの種類を取得したい場合は window.Navigator.userAgent を使用すればいいけれども、SSR 時は当然ながら window オブジェクトが存在しないので window.Navigator.userAgent を使用することはできない。
 
 ## getServerSideProps の context から request.headers 内の user-agent を取得する
 
@@ -16,8 +18,7 @@ category: 'next.js'
   try {
     // この userAgent を使えばどうとでも判断できる
     const userAgent = context.req.headers['user-agent'];
-    const response = await axios.get('https://example.com/api/hoge');
-    return ({ props: { games: response.data }});
+    return ({ props: {}});
   } catch (e) {
     console.error('[error] / SSR error', e)
     return {
@@ -36,109 +37,41 @@ category: 'next.js'
 $ npm i ismobilejs
 ```
 
-- UserAgentClass を実装する
-
+実装
 ```ts
-import isMobile from 'ismobilejs';
+import ismobile from 'ismobilejs';
 
-interface IUserAgentController {
-  serverSideInitialize: (userAgent: any) => void,
-  clientSideInitialize: () => void,
-
-  isMobile: () => boolean,
-  isTablet: () => boolean,
-  isDesktop: () => boolean,
+type PropsType = {
+  isMobile: boolean,
 }
 
-export class UserAgentClass implements IUserAgentController {
+const TestPage = (props: PropsType) => {
+  const { isMobile } = props;
+  return (
+    isMobile ? (
+      <>mobile page</>
+    ) : (
+      <>desktop page</>
+    )
+  );
+};
 
-  private _isMobile: boolean = false;
-  private _isTablet: boolean = false;
-  private _isDesktop: boolean = false;
-
-  constructor() {}
-
-  serverSideInitialize(userAgent: any) {
-    if (this.isInitialized()) {
-      return;
-    }
-
-    const mobile = isMobile(userAgent).any;
-    const tablet = isMobile(userAgent).tablet;
-
-    this._isMobile = mobile && !tablet;
-    this._isTablet = tablet;
-    this._isDesktop = !mobile && !tablet;
-  }
-
-  clientSideInitialize() {
-    if (this.isInitialized()) {
-      return;
-    }
-
-    const mobile = isMobile().any;
-    const tablet = isMobile().tablet;
-
-    this._isMobile = mobile && !tablet;
-    this._isTablet = tablet;
-    this._isDesktop = !mobile && !tablet;
-  };
-
-  isMobile() {
-    if (!this.isInitialized()) {
-      this.clientSideInitialize();
-    }
-    return this._isMobile;
-  };
-
-  isTablet() {
-    if (!this.isInitialized()) {
-      this.clientSideInitialize();
-    }
-    return this._isTablet;
-  }
-
-  isDesktop() {
-    if (!this.isInitialized()) {
-      this.clientSideInitialize();
-    }
-    return this._isDesktop;
-  };
-
-  private isInitialized() {
-    return [this._isMobile, this._isTablet, this._isDesktop].some((bool) => bool);
-  }
-
-}
-
-export const UserAgent = new UserAgentClass();
-```
-
-- SSR するコンポネント側
-
-```ts
-import type { NextPage } from 'next';
-
-const Home: NextPage<HomeProps> = (props) => {
-  const { hoge } = props;
-
-  console.log('isMobile', UserAgent.isMobile());
-  console.log('isTablet', UserAgent.isTablet());
-  console.log('isDesktop', UserAgent.isDesktop());
-
-  return <Hoge hoge={hoge} />;
-}
+export default TestPage;
 
 export async function getServerSideProps(context: any) {
   try {
-    // この userAgent を使えばどうとでも判断できる
+    // userAgent 取得
     const userAgent = context.req.headers['user-agent'];
-    // 初期化
-    UserAgent.serverSideInitialize(userAgent);
-    const response = await axios.get('https://example.com/api/hoge');
-    return ({ props: { hoge: response.data }});
-  } catch (e) {
-    console.error('[error] / SSR error', e)
+    // mobile かどうか
+    const isMobile = ismobile(userAgent).any;
+  
+    return {
+      props: {
+        isMobile,
+      }
+    }
+  } catch (error) {
+    console.error('error in getServerSideProps !!', error);
     return {
       notFound: true,
     };
