--- a/posts/2022-08-31.md
+++ b/posts/2022-08-31.md
@@ -14,7 +14,9 @@ keywords: 'next.js'
 ## getServerSideProps の context から request.headers 内の user-agent を取得する
 
 ```ts
- export async function getServerSideProps(context: any) {
+import { NextPageContext } from 'next';
+
+export async function getServerSideProps(context: NextPageContext) {
   try {
     // この userAgent を使えばどうとでも判断できる
     const userAgent = context.req.headers['user-agent'];
@@ -39,6 +41,7 @@ $ npm i ismobilejs
 
 実装
 ```ts
+import { NextPageContext } from 'next';
 import ismobile from 'ismobilejs';
 
 type PropsType = {
@@ -58,7 +61,7 @@ const TestPage = (props: PropsType) => {
 
 export default TestPage;
 
-export async function getServerSideProps(context: any) {
+export async function getServerSideProps(context: NextPageContext) {
   try {
     // userAgent 取得
     const userAgent = context.req.headers['user-agent'];
